--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Polytope</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="assets/styles/styles.css" rel="stylesheet">
 </head>
 
 <body class="leading-normal tracking-normal text-gray-900">
@@ -18,7 +18,7 @@
                 <div class="w-full flex items-center justify-between">
                     <a class="flex items-center text-indigo-400 no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
                         href="#">
-                        <img src="logo-01.svg" class="h-12 fill-current text-indigo-600 pr-2" />
+                        <img src="assets/logos/logo-01.svg" class="h-12 fill-current text-indigo-600 pr-2" />
                     </a>
 
                     <div class="flex w-1/2 justify-end content-center">
@@ -67,7 +67,7 @@
 
             <!--Right Col-->
             <div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
-                <img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="undraw_career_progress_ivdb.svg">
+                <img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="assets/images/undraw_career_progress_ivdb.svg">
             </div>
         </div>
     </div>
@@ -92,7 +92,7 @@
                         <div class="testimonial-logo">
                             <div class="customerLogo">
                                 <div class="customerLogo-image">
-                                    <img src="logo.png" alt="" width="100%">
+                                    <img src="assets/logos/logo.png" alt="" width="100%">
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                 <div class="flex-1 max-w-full-md rounded overflow-hidden shadow-lg bg-white">
                     <div class="px-6 py-4">
                         <div class="mx-auto w-1/2 lg:w-1/3 contact-image mb-4 hidden md:block">
-                            <img src="contact.svg" width="100%" />
+                            <img src="assets/icons/contact.svg" width="100%" />
                         </div>
                         <div class="font-bold text-xl mb-2">Polytope IVS</div>
                         <div class="text-gray-700 text-base">
@@ -157,7 +157,7 @@
                 <div class="flex-1 mb-6">
                     <a class="flex items-center no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
                         href="#">
-                        <img src="logo-03.svg" class="h-6 fill-current text-indigo-600 pr-2" />
+                        <img src="assets/logos/logo-03.svg" class="h-6 fill-current text-indigo-600 pr-2" />
                     </a>
                 </div>
 
