--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link href="assets/styles/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bf39559890.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="leading-normal tracking-normal text-gray-900">
@@ -52,43 +53,99 @@
         </div>
 
         <!--Main-->
-        <div class="container pt-24 md:pt-48 px-6 mx-auto flex flex-wrap flex-col md:flex-row items-center">
-
-            <!--Left Col-->
-            <div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
-                <h1
-                    class="my-4 text-3xl md:text-5xl font-bold leading-tight text-center md:text-left slide-in-bottom-h1">
-                    transforming students into professionals
-                </h1>
-                <p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left">
-                    a more detailed description of what our slogan means here. something with Praxis.
-                </p>
+        <div class="flex justify-center items-center container hero px-6 mx-auto">
+            <div class="flex flex-wrap flex-col md:flex-row">
+                <!--Left Col-->
+                <div class="flex flex-col w-full lg:w-2/5 justify-center lg:items-start overflow-y-hidden">
+                    <h1 class="my-4 text-3xl md:text-5xl font-bold leading-tight text-center">
+                        onboarding is a 
+                        <div class="inline bitch txt-polyblue">
+                            b<div class="inline bitch-ast">*</div>tch
+                        </div>
+                    </h1>
+                    <p class="leading-normal text-base md:text-2xl mb-8 text-center">
+                        we minimize your future hires' onboarding period by
+                        having them work on your projects while studying.
+    
+                        <p class="text-xl text-gray-600 text-center">
+                            Polytope covers fields such as <i>Computer-Science, 
+                            Software Engineering, IT,</i> and <i>Interaction Design</i>.
+                        </p>
+                    </p>
+                </div>
+    
+                <!--Right Col-->
+                <div class="w-full lg:w-3/5 py-6 overflow-y-hidden">
+                    <img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="assets/images/undraw_career_progress_ivdb.svg">
+                </div>
             </div>
+        </div>
+    </div>
 
-            <!--Right Col-->
-            <div class="w-full xl:w-3/5 py-6 overflow-y-hidden">
-                <img class="w-5/6 mx-auto lg:mr-0 slide-in-bottom" src="assets/images/undraw_career_progress_ivdb.svg">
+    <hr />
+
+    <div class="container mx-auto mt-12 mb-12 md:flex flex-row">
+        <div class="p-4 flex-1 mb-16 md:mb-0">
+            <div class="w-full flex justify-center">
+                <div class="text-3xl text-center mb-6 good-step txt-polyblue">
+                    <i class="fad fa-comments"></i>
+                </div>
+            </div>
+            <div class="text-2xl font-bold text-center mb-6">
+                Talk to One of Our Experts
+            </div>
+            <div class="text-center">
+                An expert on our team will work with 
+                you to understand your goals, technical
+                needs, and team dynamics.
+            </div>
+        </div>
+        <div class="p-4 flex-1 mb-16 md:mb-0">
+            <div class="w-full flex justify-center">
+                <div class="text-3xl text-center mb-6 good-step txt-polyblue">
+                    <i class="fad fa-chalkboard-teacher"></i>
+                </div>
+            </div>
+            <div class="text-2xl font-bold text-center mb-6">
+                Work With Hand-Selected Talent
+            </div>
+            <div class="text-center">
+                Within days, we'll introduce you to the 
+                right talent for your project.
+            </div>
+        </div>
+        <div class="p-4 flex-1 mb-16 md:mb-0">
+            <div class="w-full flex justify-center">
+                <div class="text-3xl text-center mb-6 good-step txt-polyblue">
+                    <i class="fad fa-id-card-alt"></i>
+                </div>
+            </div>
+            <div class="text-2xl font-bold text-center mb-6">
+                The Right Fit
+            </div>
+            <div class="text-center">
+                Work with your new team member on a trial 
+                basis, ensuring you hire the right people 
+                for the job.
             </div>
         </div>
     </div>
 
     <div class="testimonial w-full polypurple">
         <div class="container mx-auto">
-            <div class="w-2/3 flex px-8 py-12 justify-center mx-auto">
+            <div class="w-full lg:w-2/3 flex px-8 py-12 flex-col-reverse lg:flex-row justify-center mx-auto">
                 <div class="quote-here flex flex-1 justify-center items-center mr-12">
                     <div class="testimonial-content flex-1">
                         <p class="testimonial-quote text-white text-2xl">
-                            Polytope is built by engineers for engineers. The
-                            workflow of the tool fits perfectly - we were able
-                            to get set up in less than 69 minutes for a 420 person software team.
+                            We choose to work with Polytope to get a system tailored to our work process. They modernized all of our legacy infrastructures and introduced a new way for us to do our best.
                         </p>
                         <div class="testimonial-cite text-white font-bold mt-4 italic">Dia Midjord, CEO</div>
                         <p class="testimonial-hint text-white">P/F Auto</p>
                     </div>
                 </div>
-                <div class="testimonial-image relative">
-                    <div class="testimonial-imageContainer"
-                        style="background-image:url(https://images.prismic.io/clubhouse/6cd368ab-beb5-4c91-bfbb-5da4f1de319e_james-t.jpg?auto=compress,format)">
+                <div class="testimonial-image mb-2 md:relative w-full flex justify-center flex-1">
+                    <div class="testimonial-imageContainer md:ml-auto md:mr-auto"
+                        style="background-image:url(assets/images/dia.jpeg)">
                         <div class="testimonial-logo">
                             <div class="customerLogo">
                                 <div class="customerLogo-image">
@@ -239,7 +296,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
