--- a/index.html
+++ b/index.html
@@ -24,26 +24,11 @@
 
                     <div class="flex w-1/2 justify-end content-center">
                         <a class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
-                            data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
-                            <svg class="fill-current h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                <path
-                                    d="M30.063 7.313c-.813 1.125-1.75 2.125-2.875 2.938v.75c0 1.563-.188 3.125-.688 4.625a15.088 15.088 0 0 1-2.063 4.438c-.875 1.438-2 2.688-3.25 3.813a15.015 15.015 0 0 1-4.625 2.563c-1.813.688-3.75 1-5.75 1-3.25 0-6.188-.875-8.875-2.625.438.063.875.125 1.375.125 2.688 0 5.063-.875 7.188-2.5-1.25 0-2.375-.375-3.375-1.125s-1.688-1.688-2.063-2.875c.438.063.813.125 1.125.125.5 0 1-.063 1.5-.25-1.313-.25-2.438-.938-3.313-1.938a5.673 5.673 0 0 1-1.313-3.688v-.063c.813.438 1.688.688 2.625.688a5.228 5.228 0 0 1-1.875-2c-.5-.875-.688-1.813-.688-2.75 0-1.063.25-2.063.75-2.938 1.438 1.75 3.188 3.188 5.25 4.25s4.313 1.688 6.688 1.813a5.579 5.579 0 0 1 1.5-5.438c1.125-1.125 2.5-1.688 4.125-1.688s3.063.625 4.188 1.813a11.48 11.48 0 0 0 3.688-1.375c-.438 1.375-1.313 2.438-2.563 3.188 1.125-.125 2.188-.438 3.313-.875z">
-                                </path>
-                            </svg>
-                        </a>
-                        <a class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4"
-                            data-tippy-content="@twitter_handle" href="https://twitter.com/intent/tweet?url=#">
+                            data-tippy-content="@twitter_handle" href="https://github.com/polytope">
                             <svg class="fill-current h-6" viewBox="0 0 29 29">
                                 <path
                                     d="M14.499 0C6.493 0 0 6.656 0 14.867c0 6.569 4.154 12.14 9.916 14.107.726.137.99-.323.99-.717 0-.352-.012-1.288-.02-2.528-4.033.898-4.884-1.993-4.884-1.993-.66-1.718-1.61-2.175-1.61-2.175-1.317-.922.1-.904.1-.904 1.455.105 2.22 1.533 2.22 1.533 1.294 2.271 3.395 1.615 4.22 1.235.132-.96.507-1.616.921-1.987-3.22-.375-6.605-1.651-6.605-7.348 0-1.623.566-2.95 1.493-3.99-.15-.375-.647-1.888.142-3.934 0 0 1.217-.4 3.987 1.524a13.567 13.567 0 0 1 3.63-.5c1.232.005 2.472.17 3.63.5 2.769-1.924 3.984-1.524 3.984-1.524.791 2.046.294 3.559.145 3.935.93 1.038 1.49 2.366 1.49 3.989 0 5.711-3.39 6.968-6.62 7.336.52.459.984 1.366.984 2.753 0 1.987-.018 3.59-.018 4.078 0 .398.262.86.997.716C24.849 27.003 29 21.434 29 14.867 29 6.657 22.507 0 14.499 0"
                                     fill="currentColor" fill-rule="evenodd"></path>
-                            </svg>
-                        </a>
-                        <a class="inline-block text-blue-300 no-underline hover:text-indigo-800 hover:text-underline text-center h-10 p-2 md:h-auto md:p-4 "
-                            data-tippy-content="#facebook_id" href="https://www.facebook.com/sharer/sharer.php?u=#">
-                            <svg class="fill-current h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                <path d="M19 6h5V0h-5c-3.86 0-7 3.14-7 7v3H8v6h4v16h6V16h5l1-6h-6V7c0-.542.458-1 1-1z">
-                                </path>
                             </svg>
                         </a>
                     </div>
@@ -207,88 +192,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="bg-white">
-        <div class="container mx-auto mt-8 px-8">
-            <div class="w-full flex flex-col md:flex-row py-6">
-                <div class="flex-1 mb-6">
-                    <a class="flex items-center no-underline hover:no-underline font-bold text-2xl lg:text-4xl"
-                        href="#">
-                        <img src="assets/logos/logo-03.svg" class="h-6 fill-current text-indigo-600 pr-2" />
-                    </a>
-                </div>
-
-                <div class="flex-1">
-                    <p class="uppercase font-extrabold text-gray-500 md:mb-6">Links</p>
-                    <ul class="list-reset mb-6">
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">FAQ</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Help</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Support</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="flex-1">
-                    <p class="uppercase font-extrabold text-gray-500 md:mb-6">Legal</p>
-                    <ul class="list-reset mb-6">
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Terms</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="flex-1">
-                    <p class="uppercase font-extrabold text-gray-500 md:mb-6">Social</p>
-                    <ul class="list-reset mb-6">
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Facebook</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Linkedin</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Twitter</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="flex-1">
-                    <p class="uppercase font-extrabold text-gray-500 md:mb-6">
-                        Company
-                    </p>
-                    <ul class="list-reset mb-6">
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Official
-                                Blog</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">About
-                                Us</a>
-                        </li>
-                        <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                            <a href="#"
-                                class="font-light no-underline hover:underline text-gray-800 hover:text-orange-500">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <div class="contact-wrap" id="floatingContactWrap">
         <div class="btn primary-btn fixed cursor-pointer" id="floatingContactButton" style="display: inline-block;">
