Added Google Analytics
Added Google Analytics to to page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link href="assets/styles/styles.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bf39559890.js" crossorigin="anonymous"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178040502-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-178040502-1');
+    </script>
 </head>
 
 <body class="leading-normal tracking-normal text-gray-900">
