--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <div class="font-bold text-xl mb-2">Polytope IVS</div>
                         <div class="text-gray-700 text-base">
                             <p>c/o Polytope</p>
-                            <p>Niels Jernes Vej 10, 3-328</p>
+                            <p>Niels Jernes Vej 10</p>
                             <p>9220 Aalborg Øst</p>
                             <p>Denmark</p>
                             <p class="mt-4">
