--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <div class="mx-auto w-1/2 lg:w-1/3 contact-image mb-4 hidden md:block">
                             <img src="assets/icons/contact.svg" width="100%" />
                         </div>
-                        <div class="font-bold text-xl mb-2">Polytope IVS</div>
+                        <div class="font-bold text-xl mb-2">Polytope ApS</div>
                         <div class="text-gray-700 text-base">
                             <p>c/o Polytope</p>
                             <p>Niels Jernes Vej 10</p>
