--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
                                     <p class="inline">tel: </p>
                                     <p class="inline text-indigo-500">+45 22 93 94 64</p>
                                 </a>
+                                <p class="">CVR: 39447150</p>
                             </p>
                             <p>
                                 <a href="mailto:contact@polytope.dk">
